--- a/main_app/templates/cities/user.html
+++ b/main_app/templates/cities/user.html
@@ -22,9 +22,10 @@
     <div class="col s10 m3">
         <div class="card large" id="cardy2">
             <div class="card-content">
-                <span><a href="{% url 'userprofile' userprofile.id %}">{{city.user}}</a></span>
-                <p><span><a href="{% url 'detail' city.id %}">{{city.city}}, {{city.country.name}}</a></span></p>
-                <p>{{city.date}}</p>
+                <span>👤 <a href="{% url 'userprofile' userprofile.id %}">{{city.user}}</a></span>
+                <p><span>📍 <a href="{% url 'detail' city.id %}">{{city.city}}, {{city.country.name}}</a></span></p>
+                <p>🗓 {{city.date}}</p>
+                <p><hr></p>
                 <p>{{ city.description }}</p>
             </div>
         </div>
