--- a/main_app/templates/cities/index.html
+++ b/main_app/templates/cities/index.html
@@ -11,7 +11,7 @@
         <div class="card large" id="cardy">
             <div class="card-content">
                 {% for photo in city.photo_set.all %}
-                <img class="responsive-img card-panel" src="{{ photo.url }}">
+                <a href="{% url 'detail' city.id %}"><img class="responsive-img card-panel" src="{{ photo.url }}"></a>
                 {% empty %}
                 <div class="card-panel teal-text center-align">No Photos Uploaded</div>
                 {% endfor %}
@@ -21,7 +21,7 @@
     <div class="col s10 m3">
         <div class="card large" id="cardy2">
             <div class="card-content">
-                <span>👤 <a href="{% url 'userprofile' city.user.id %}">{{city.user}}</a></span>
+                <span class="username">👤 <a href="{% url 'userprofile' city.user.id %}">{{city.user}}</a></span>
                 <p><span>📍 <a href="{% url 'detail' city.id %}">{{city.city}}, {{city.country.name}}</a></span></p>
                 <p>🗓 {{city.date}}</p>
                 <p><hr></p>
