--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -11,7 +11,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Pacifico&family=Roboto+Slab&display=swap" rel="stylesheet">
+    
 
     {% block title %}
     <title>Travelogue</title>
